--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,8 @@ before_script:
   - cp certs/saml.crt.example certs/saml.crt
   - cp keys/saml.key.enc.example keys/saml.key.enc
   - cp keys/equifax_rsa.example keys/equifax_rsa
+  - gpg --dearmor < keys/equifax_gpg.pub.example > keys/equifax_gpg.pub.bin
+  - gpg --import keys/equifax_gpg.example
   - bin/rake db:setup --trace
   - bin/rake assets:precompile
 bundler_args: "--deployment --jobs=3 --retry=3 --without deploy development doc production"
