--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,8 +52,11 @@ Metrics/ClassLength:
   Exclude:
   - spec/**/*
   - app/controllers/application_controller.rb
+  - app/controllers/openid_connect/authorization_controller.rb
   - app/controllers/users/confirmations_controller.rb
   - app/controllers/devise/two_factor_authentication_controller.rb
+  - app/decorators/user_decorator.rb
+  - app/services/idv/session.rb
 
 Metrics/LineLength:
   Description: Limit lines to 100 characters.
