--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "~3.8.x"
   },
   "dependencies": {
+    "basscss-sass": "^3.0.0",
     "classlist.js": "^1.1.20150312",
     "field-kit": "^2.1.0",
     "focus-trap": "^2.3.0",
@@ -20,6 +21,7 @@
     "babelify": "^7.3.0",
     "browserify": "^13.0.0",
     "browserify-incremental": "^3.1.1",
+    "chai": "^3.5.0",
     "dirty-chai": "^1.2.2",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^14.1.0",
