Update authenticator app setup page

--- a/.eslintrc
+++ b/.eslintrc
@@ -17,6 +17,7 @@
     'fixture': true
   },
   'rules': {
+    'jsx-a11y/img-has-alt': 'off',
     'func-names': 0,
     'space-before-function-paren': 0,
     'prefer-arrow-callback': 0,
