--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -109,6 +109,7 @@ ignore_unused:
   - 'account.index.auth_app_enabled'
   - 'account.index.auth_app_disabled'
   - 'tooltips.authentication_app'
+  - 'titles.sign_up.*'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
 # - 'simple_form.{error_notification,required}.:'
