Update GPG config
**Why**:
- gpg_email is different in production than staging
- clarify that the gpg passphrase is for development (and test) only

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -9,7 +9,6 @@
 # Figaro requires all values to be explicit strings.
 
 email_from: 'no-reply@login.gov'
-equifax_gpg_email: 'logs@login.gov'
 idv_max_attempts: '3'
 idv_attempt_window_in_hours: '24'
 mailer_domain_name: 'http://localhost:3000'
@@ -60,9 +59,10 @@ development:
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
   equifax_avs_username: 'sekret'
+  equifax_development_example_gpg_passphrase: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
-  equifax_gpg_passphrase: 'sekret'
+  equifax_gpg_email: 'logs@login.gov'
   equifax_password: 'sekret'
   equifax_phone_username: 'sekret'
   equifax_ssh_passphrase: 'sekret'
@@ -112,9 +112,10 @@ production:
   enable_identity_verification: 'false'
   enable_test_routes: 'false'
   equifax_avs_username: 'sekret'
+  equifax_development_example_gpg_passphrase: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
-  equifax_gpg_passphrase: 'sekret'
+  equifax_gpg_email: 'sekret@example.com'
   equifax_password: 'sekret'
   equifax_phone_username: 'sekret'
   equifax_ssh_passphrase: 'sekret'
@@ -165,9 +166,10 @@ test:
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
   equifax_avs_username: 'sekret'
+  equifax_development_example_gpg_passphrase: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
-  equifax_gpg_passphrase: 'sekret'
+  equifax_gpg_email: 'logs@login.gov'
   equifax_password: 'sekret'
   equifax_phone_username: 'sekret'
   equifax_ssh_passphrase: 'sekret'
