--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -58,6 +58,7 @@ development:
   domain_name: 'localhost:3000'
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
+  enable_usps_verification: 'true'
   equifax_avs_username: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
@@ -109,6 +110,7 @@ production:
   domain_name: 'example.com'
   enable_identity_verification: 'false'
   enable_test_routes: 'false'
+  enable_usps_verification: 'false'
   equifax_avs_username: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
@@ -161,6 +163,7 @@ test:
   dashboard_api_token: '123ABC'
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
+  enable_usps_verification: 'true'
   equifax_avs_username: 'sekret'
   equifax_eid_username: 'sekret'
   equifax_endpoint: 'sekret'
