--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -358,10 +358,10 @@ production:
     friendly_name: 'Railroad Retirement Board'
     agency: 'RRB'
     logo: 'rrb.svg'
-    acs_url: 'https://onlinetest.rrb.gov/login/login/callback'
-    assertion_consumer_logout_service_url: 'https://onlinetest.rrb.gov/login/login/logout'
-    sp_initiated_login_url: 'https://onlinetest.rrb.gov/login/login/Auth'
-    return_to_sp_url: 'https://onlinetest.rrb.gov/login/login/RRBHome'
+    acs_url: 'https://onlinetest.rrb.gov/AA1/login/login/callback'
+    assertion_consumer_logout_service_url: 'https://onlinetest.rrb.gov/AA1/BOS/BOS/logout'
+    sp_initiated_login_url: 'https://onlinetest.rrb.gov/AA1/login/login/Auth'
+    return_to_sp_url: 'https://onlinetest.rrb.gov/AA1/Login/login/RRBHome'
     block_encryption: 'aes256-cbc'
     cert: 'rrb_bos_pre_prod'
     attribute_bundle:
