--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -52,6 +52,7 @@ test:
       - 'http://localhost:7654/'
     cert: 'saml_test_sp'
     friendly_name: 'Test SP'
+    assertion_consumer_logout_service_url: ''
 
 development:
   'https://rp1.serviceprovider.com/auth/saml/metadata':
