--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -54,6 +54,13 @@ test:
     friendly_name: 'Test SP'
     assertion_consumer_logout_service_url: ''
 
+  'urn:gov:gsa.openidconnect:delegated-proofing':
+    redirect_uris:
+      - 'http://localhost:7654/'
+    cert: 'saml_test_sp'
+    friendly_name: 'Test Delegated Proofing SP'
+    supports_delegated_proofing: true
+
 development:
   'https://rp1.serviceprovider.com/auth/saml/metadata':
     metadata_url: 'http://localhost:3000/test/saml/metadata'
