Revert "Added new logo for cbp trusted traveler program"

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -383,7 +383,7 @@ production:
   'urn:gov:dhs.cbp.jobs:openidconnect:jenkins-pspd-credential-service':
     friendly_name: 'CBP PSPD Trusted Traveler Programs'
     agency: 'DHS'
-    logo: 'cbp-ttp.png'
+    logo: 'cbp.png'
     cert: 'cbp_goes_pre_prod'
     redirect_uris:
       - 'http://10.156.152.27/login'
