Use Mandrill's HTTPS API to deliver emails
**Why**: For our LOA3 ATO we need to configure our firewall to only
allow HTTPS traffic. This will prevent us from sending emails over 587
with SMTPS.

Set MandrilDM API key when key is present

**Why**: Whether the Mandrill API key is present is a better indicator
of whether we want to use Mandrill than which environment we are in

Remove smtp settings from application.yml.example

**Why**: We no longer need the SMTP settings in the production now that
we are using the Mandrill API to deliver emails.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -132,6 +132,7 @@ production:
   lockout_period_in_minutes: '10'
   logins_per_ip_limit: '20'
   logins_per_ip_period: '8'
+  mandrill_api_token: '123abc'
   newrelic_license_key: 'xxx'
   newrelic_browser_key: ''
   newrelic_browser_app_id: ''
@@ -152,7 +153,6 @@ production:
   secret_key_base: 'generate via `rake secret`'
   session_encryption_key: 'generate via `rake secret`'
   session_timeout_in_minutes: '8'
-  smtp_settings: '{"address":"smtp.mandrillapp.com", "port":587, "authentication":"login", "enable_starttls_auto":true, "user_name":"user@gmail.com","password":"xxx"}'
   twilio_accounts: '[{"sid":"sid", "auth_token":"token", "number":"9999999999"}]'
   twilio_record_voice: 'false'
   use_kms: 'false'
