Add timestamp to ActiveJob logs
**Why**: Rails doesn't include timestamps by default, so we need to
override the `enqueue` method to add a timestamp. It's helpful to
know when a particular background job was enqueued when troubleshooting.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -47,6 +47,7 @@ Metrics/BlockLength:
     - 'config/initializers/secure_headers.rb'
     - 'config/routes.rb'
     - 'spec/**/*.rb'
+    - 'config/initializers/active_job_logger_patch.rb'
 
 Metrics/ClassLength:
   Description: Avoid classes longer than 100 lines of code.
