--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "npm": "~3.8.x"
   },
   "dependencies": {
+    "app": "^0.1.0",
     "basscss-sass": "^3.0.0",
     "classlist.js": "^1.1.20150312",
     "clipboard": "^1.6.1",
