Update intl code as user types phone
**Why**: It is confusing that the international code selection and the
number in the phone input can be out of sync. This commit keeps both in
sync by updating them as the user types. This also helps make sure the
format of phone number makes a little more sense.

Use libphonenumber-js to format intl numbers

**Why**: The phone number formatter built into field-kit does not know
how to format international numbers. This commit abandons that phone
formatter in favor of a custom formatter built on top of
libphonenumber-js which does know how to format international numbers.

Format phone numbers on update user phone form

**Why**: This change gives users the same experience typing numbers and
selecting international codes that they get from the 2FA setup form.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "field-kit": "^2.1.0",
     "focus-trap": "^2.3.0",
     "hint.css": "^2.3.2",
+    "libphonenumber-js": "^0.4.23",
     "normalize.css": "^4.2.0",
     "sinon": "^1.17.7",
     "zxcvbn": "^4.4.2"
