Import stylesheets from style-guide

--- a/package.json
+++ b/package.json
@@ -16,15 +16,12 @@
   },
   "dependencies": {
     "app": "^0.1.0",
-    "basscss-sass": "^3.0.0",
     "classlist.js": "^1.1.20150312",
     "clipboard": "^1.6.1",
     "field-kit": "^2.1.0",
     "focus-trap": "^2.3.0",
-    "hint.css": "^2.3.2",
-    "identity-style-guide": "^0.2.3",
+    "identity-style-guide": "0.2.6",
     "libphonenumber-js": "^0.4.23",
-    "normalize.css": "^4.2.0",
     "sinon": "^1.17.7",
     "zxcvbn": "^4.4.2"
   },
