Fix Docker setup
**Why**: The DB rake tasks were not able to run

**How**:
- Update `database.yml` to use Docker-specific settings
- Upgrade Node.js
- Use the new `/generate-example-keys` command and run it in bin/setup

Fixes #1750
Fixes #1644

--- a/config/database.yml
+++ b/config/database.yml
@@ -3,9 +3,10 @@ postgresql: &postgresql
   encoding: utf8
   database: upaya_<%= Rails.env %>
   port: 5432
+  username: <%= ENV['DOCKER_DB_USER'] %>
 
 defaults: &defaults
-  host: localhost
+  host: <%= ENV['DOCKER_DB_HOST'] || 'localhost' %>
   pool: 5
   <<: *postgresql
   # timeout settings
