Update slim_lint from 0.13.0 to 0.14.0
And fix offenses.

--- a/.slim-lint.yml
+++ b/.slim-lint.yml
@@ -1,5 +1,6 @@
 exclude:
     - 'app/views/shared/_flashes.html.slim'
+    - 'app/views/shared/_null.html.slim'
 linters:
   LineLength:
     max: 100
