--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,6 +43,7 @@ Metrics/BlockLength:
     - 'app/services/omniauth_authorizer.rb'
     - 'app/services/single_logout_handler.rb'
     - 'app/services/pii/attributes.rb'
+    - 'app/validators/form_finance_validator.rb'
     - 'config/environments/*.rb'
     - 'config/initializers/secure_headers.rb'
     - 'config/routes.rb'
