Template secrets into database.yml
**Why**: Easier to manage non-secret configs (like timeouts)
across environments.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -62,6 +62,10 @@ development:
   aws_region: 'us-east-1'
   dashboard_api_token: 'test_token'
   dashboard_url: 'http://localhost:3001/api/service_providers'
+  database_host: ''
+  database_name: ''
+  database_password: ''
+  database_username: ''
   domain_name: 'localhost:3000'
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
@@ -179,6 +183,10 @@ test:
   aws_kms_key_id: 'alias/login-dot-gov-test-keymaker'
   aws_region: 'us-east-1'
   domain_name: 'www.example.com'
+  database_host: ''
+  database_name: ''
+  database_password: ''
+  database_username: ''
   dashboard_api_token: '123ABC'
   enable_identity_verification: 'true'
   enable_test_routes: 'true'
