--- a/.slim-lint.yml
+++ b/.slim-lint.yml
@@ -7,5 +7,8 @@ linters:
     exclude:
       - 'app/views/pages/help.html.slim'
       - 'app/views/pages/privacy_policy.html.slim'
+  TagCase:
+    exclude:
+     - 'app/views/voice/otp/show.xml.slim'
   RuboCop:
     enabled: true
