--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -209,7 +209,7 @@ production:
     cert: 'sp_micropurchase'
     agency: 'TTS Acquisition'
     logo: '18f.svg'
-    allow_on_prod_chef_env: 'true'
+    restrict_to_deploy_env: 'prod'
     friendly_name: 'Micro-purchase'
     return_to_sp_url: 'https://micropurchase.18f.gov'
     attribute_bundle:
@@ -248,6 +248,7 @@ production:
     friendly_name: 'CBP Jobs'
     agency: 'DHS'
     logo: 'cbp.png'
+    restrict_to_deploy_env: 'staging'
 
   'urn:gov:dhs.cbp.jobs:openidconnect:cert:app':
     redirect_uris:
@@ -255,6 +256,7 @@ production:
     friendly_name: 'CBP Jobs'
     agency: 'DHS'
     logo: 'cbp.png'
+    restrict_to_deploy_env: 'staging'
 
   'urn:gov:dhs.cbp.jobs:openidconnect:prod':
     redirect_uris:
@@ -262,7 +264,7 @@ production:
     friendly_name: 'CBP Jobs'
     agency: 'DHS'
     logo: 'cbp.png'
-    allow_on_prod_chef_env: 'true'
+    restrict_to_deploy_env: 'prod'
     return_to_sp_url: 'https://careers.cbp.dhs.gov'
 
   'urn:gov:dhs.cbp.jobs:openidconnect:prod:app':
@@ -271,7 +273,7 @@ production:
     friendly_name: 'CBP Jobs'
     agency: 'DHS'
     logo: 'cbp.png'
-    allow_on_prod_chef_env: 'true'
+    restrict_to_deploy_env: 'prod'
 
   # RRB
   'urn:gov:gsa:SAML:2.0.profiles:sp:sso:RRB:BOS-Pre-Prod':
@@ -309,7 +311,7 @@ production:
 
   'urn:gov:dhs.cbp.jobs:openidconnect:aws-cbp-ttp':
     agency: 'DHS'
-    allow_on_prod_chef_env: 'true'
+    restrict_to_deploy_env: 'prod'
     block_encryption: 'aes256-cbc'
     cert: 'cbp_goes_prod'
     friendly_name: 'CBP Trusted Traveler Programs'
@@ -325,4 +327,4 @@ production:
     logo: 'cbp.png'
     redirect_uris:
       - 'gov.dhs.cbp.pspd.oars.user.prod://result'
-    allow_on_prod_chef_env: 'true'
+    restrict_to_deploy_env: 'prod'
