Replace browserify-rails with rails-webpacker
**Why**: rails-webpacker compiles the assets much faster than
browserify-rails. With browserify-rails, our assets take so long to
compile that the initial requests to the idp time out locally. I have
not observed that with webpacker.

Additionally, rails-webpacker is recommended by the maintainer of
browserify-rails for projects that have already made the step towards
using commonjs modules.

One tradeoff of this is that rails-webpacker expects yarn, so we'll need
to move from npm to yarn for this to work.

Another tradeoff is that teaspoon does not appear to play nicely with
rails-webpacker, so I removed it and replaced it with a bare-metal
mocha.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # Specify the Ruby version you desire here
-      - image: circleci/ruby:2.3.5-node-browsers
+      - image: circleci/ruby:2.3.6-node-browsers
         environment:
           RAILS_ENV: test
           CC_TEST_REPORTER_ID: faecd27e9aed532634b3f4d3e251542d7de9457cfca96a94208a63270ef9b42e
@@ -56,8 +56,8 @@ jobs:
       - run:
           name: Test Setup
           command: |
-            npm install
-            npm run build
+            yarn install
+            yarn build
             cp config/application.yml.example config/application.yml
             cp certs/saml.crt.example certs/saml.crt
             cp keys/saml.key.enc.example keys/saml.key.enc
@@ -72,7 +72,7 @@ jobs:
             ./cc-test-reporter before-build
 
             bundle exec rspec --format progress
-            bundle exec teaspoon
+            yarn test
             bundle exec slim-lint app/views
 
       - run:
