Add ServiceProvider#redirect_uris to the CSP header
**Why**:
- USDS's HipChat SSO process doesn't work on iOS devices because
the RelayState on the iOS app has a custom scheme/form of
hipchat://idp_return, which isn't a uri currently included in
the Content-Security-Policy headers

**How**:
- Add ability to include custom app scheme URIs in
ServiceProvider#redirect_uris, and whitelist them in the CSP form-action directive

--- a/config/service_providers.yml
+++ b/config/service_providers.yml
@@ -9,6 +9,8 @@ test:
     friendly_name: 'Your friendly Government Agency'
     logo: 'generic.svg'
     return_to_sp_url: 'http://localhost:3000'
+    redirect_uris:
+      - 'x-example-app://idp_return'
     attribute_bundle:
       - email
       - phone
