Add rack-attack back to the app
**Why**: To rate limit sign in attempts and abusive requests in
general.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -70,6 +70,7 @@ development:
   database_username: ''
   domain_name: 'localhost:3000'
   enable_identity_verification: 'true'
+  enable_rate_limiting: 'false'
   enable_test_routes: 'true'
   enable_usps_verification: 'true'
   equifax_avs_username: 'sekret'
@@ -88,8 +89,8 @@ development:
   hmac_fingerprinter_key_queue: '["old-key-one", "old-key-two"]'
   issuers_with_email_nameid_format: ''
   lockout_period_in_minutes: '10'
-  logins_per_ip_limit: '20'
-  logins_per_ip_period: '8'
+  logins_per_ip_limit: '5'
+  logins_per_ip_period: '60'
   newrelic_browser_key: ''
   newrelic_browser_app_id: ''
   newrelic_license_key: ''
@@ -103,6 +104,7 @@ development:
   rack_mini_profiler: 'off'
   reauthn_window: '120'
   redis_url: 'redis://localhost:6379/0'
+  redis_throttle_url: 'redis://localhost:6379/1'
   requests_per_ip_limit: '300'
   requests_per_ip_period: '300'
   saml_passphrase: 'trust-but-verify'
@@ -135,6 +137,7 @@ production:
   dashboard_api_token:
   domain_name: 'login.gov'
   enable_identity_verification: 'false'
+  enable_rate_limiting: 'true'
   enable_test_routes: 'false'
   enable_usps_verification: 'false'
   equifax_avs_username:
@@ -154,8 +157,8 @@ production:
   hmac_fingerprinter_key_queue: # '["old-key-one", "old-key-two"]'
   issuers_with_email_nameid_format: 'sp1,sp2'
   lockout_period_in_minutes: '10'
-  logins_per_ip_limit: '20'
-  logins_per_ip_period: '8'
+  logins_per_ip_limit: '5'
+  logins_per_ip_period: '60'
   mandrill_api_token: '' # Empty string to switch to SES
   newrelic_browser_key: ''
   newrelic_browser_app_id: ''
@@ -170,6 +173,7 @@ production:
   profile_proofing_vendor: 'mock'
   reauthn_window: '120'
   redis_url: 'redis://redis.login.gov.internal:6379'
+  redis_throttle_url: 'redis://redis.login.gov.internal:6379/1'
   requests_per_ip_limit: '300'
   requests_per_ip_period: '300'
   saml_passphrase:
@@ -203,6 +207,7 @@ test:
   database_username: ''
   dashboard_api_token: '123ABC'
   enable_identity_verification: 'true'
+  enable_rate_limiting: 'true'
   enable_test_routes: 'true'
   enable_usps_verification: 'true'
   equifax_avs_username: 'sekret'
@@ -233,6 +238,7 @@ test:
   profile_proofing_vendor: 'mock'
   reauthn_window: '120'
   redis_url: 'redis://localhost:6379/0'
+  redis_throttle_url: 'redis://localhost:6379/1'
   requests_per_ip_limit: '3'
   requests_per_ip_period: '60'
   saml_passphrase: 'trust-but-verify'
