Use Twilio Copilot to send SMS
**Why**: So we can use the Copilot messaging service to balance messages
across a pool of numbers with smarter telophony logic than picking a
random number.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -127,6 +127,7 @@ development:
   state_id_proofing_vendor: 'mock'
   telephony_disabled: 'true'
   twilio_accounts: '[{"sid":"sid", "auth_token":"token", "number":"9999999999"}]'
+  twilio_messaging_service_sid: '123abc'
   twilio_record_voice: 'true'
   use_dashboard_service_providers: 'true'
   use_kms: 'false'
@@ -200,6 +201,7 @@ production:
   session_timeout_in_minutes: '8'
   state_id_proofing_vendor: 'mock'
   twilio_accounts: # '[{"sid":"sid", "auth_token":"token", "number":"9999999999"}]'
+  twilio_messaging_service_sid: '123abc'
   twilio_record_voice: 'false'
   use_kms: 'true'
   usps_confirmation_max_days: '30'
@@ -270,6 +272,7 @@ test:
   session_timeout_in_minutes: '8'
   state_id_proofing_vendor: 'mock'
   twilio_accounts: '[{"sid":"sid1", "auth_token":"token1", "number":"9999999999"}, {"sid":"sid2", "auth_token":"token2", "number":"2222222222"}]'
+  twilio_messaging_service_sid: '123abc'
   twilio_record_voice: 'true'
   use_kms: 'false'
   usps_confirmation_max_days: '10'
