Upgrade AAMVA gem to 1.0.1
**Why**: To take advantage of namespace matching and dynamic message
destination IDs

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -59,6 +59,7 @@ valid_authn_contexts: '["http://idmanagement.gov/ns/assurance/loa/1", "http://id
 usps_mail_batch_hours: '24'
 
 development:
+  aamva_cert_enabled: 'true'
   aamva_public_key: '123abc'
   aamva_private_key: '123abc'
   aamva_verification_url: 'https://example.org:12345/verification/url'
@@ -142,9 +143,10 @@ development:
   enable_load_testing_mode: 'false'
 
 production:
-  aamva_public_key: '123abc'
-  aamva_private_key: '123abc'
-  aamva_verification_url: 'https://example.org:12345/verification/url'
+  aamva_cert_enabled: 'true'
+  aamva_public_key: # Base64 encoded public key for AAMVA
+  aamva_private_key: # Base64 encoded private key for AAMVA
+  aamva_verification_url: # DLDV Verification URL
   async_job_refresh_interval_seconds: '5'
   async_job_refresh_max_wait_seconds: '15'
   attribute_cost: '4000$8$4$' # SCrypt::Engine.calibrate(max_time: 0.5)
@@ -220,6 +222,7 @@ production:
   enable_load_testing_mode: 'false'
 
 test:
+  aamva_cert_enabled: 'true'
   aamva_public_key: '123abc'
   aamva_private_key: '123abc'
   aamva_verification_url: 'https://example.org:12345/verification/url'
