Catch timeout exceptions and return 503
**Why:**

- Even with the database timeout settings, there are edge cases that cause the connection to RDS to hang around too long after RDS has gone away (e.g., when the master changes).
- When a request does time out, we want to handle it gracefully rather than the default content returned by an ALB/ELB.

**How:**

- We decrease the time to first keepalive so that we can (hopefully) catch dead connections before the web request times out. This timeout is at the ALB/ELB and the Rack::Timeout level.
- We catch timeout errors so we can return a useful page letting the user know that the request was taking too long.

--- a/config/database.yml
+++ b/config/database.yml
@@ -12,11 +12,13 @@ defaults: &defaults
   timeout: 5000
   reconnect: true
   connect_timeout: 2
-  keepalives_idle: 30
+  keepalives_idle: 10
   keepalives_interval: 10
   keepalives_count: 2
   checkout_timeout: 5
   reaping_frequency: 10
+  variables:
+    statement_timeout: 2500 # ms
 
 development:
   <<: *defaults
