--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -80,6 +80,7 @@ development:
   database_password: ''
   database_username: ''
   domain_name: 'localhost:3000'
+  enable_agency_based_uuids: 'false'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'false'
   enable_test_routes: 'true'
@@ -160,6 +161,7 @@ production:
   disable_email_sending: 'false'
   dashboard_api_token:
   domain_name: 'login.gov'
+  enable_agency_based_uuids: 'false'
   enable_identity_verification: 'false'
   enable_rate_limiting: 'true'
   enable_test_routes: 'false'
@@ -242,6 +244,7 @@ test:
   database_password: ''
   database_username: ''
   dashboard_api_token: '123ABC'
+  enable_agency_based_uuids: 'true'
   enable_identity_verification: 'true'
   enable_rate_limiting: 'true'
   enable_test_routes: 'true'
