--- a/config/country_dialing_codes.yml
+++ b/config/country_dialing_codes.yml
@@ -785,7 +785,7 @@ VN:
 VG:
   name: Virgin Islands (British)
   country_code: '1'
-  sms_only: true
+  sms_only: false
 VI:
   name: Virgin Islands (U.S.)
   country_code: '1'
