Enable custom request x509 certs and secret keys
**Why**: So that an IDP can use multiple x509 certs and secret keys at
one time. This is useful for things such as per-SP certificates or
during secret key rotation.

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,8 @@ engines:
         ruby:
     exclude_paths:
     - 'spec/**/*'
+    - 'lib/saml_idp/logout_response_builder.rb'
+    - 'lib/saml_idp/logout_request_builder.rb'
   fixme:
     enabled: true
     exclude_paths:
