--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,9 @@ jobs:
             yarn build
             cp config/application.yml.example config/application.yml
             cp certs/saml.crt.example certs/saml.crt
+            cp certs/saml2018.crt.example certs/saml2018.crt
             cp keys/saml.key.enc.example keys/saml.key.enc
+            cp keys/saml2018.key.enc.example keys/saml2018.key.enc
             bin/generate-example-keys
             bundle exec rake db:setup --trace
             bundle exec rake assets:precompile
