--- a/.gitignore
+++ b/.gitignore
@@ -33,10 +33,12 @@ rerun.txt
 Vagrantfile
 
 # folders
-/certs/saml.crt
+/certs/*.crt
+!/cert/*.crt.example
 /config/application.yml
 /config/aws.yml
-/keys/saml.key.enc
+/keys/*.key.enc
+!/keys/*.key.enc.example
 /keys/equifax_rsa
 /keys/equifax_rsa.pub
 /keys/equifax_gpg.pub.bin
