Move assets:precompile into separate script.
**Why**:

The rake assets:precompile process has to be run after deploy/activate
because it relies on the full database configuration being available.

We still want to run as many of the build steps earlier so that they can
be part of a static deploy artifact in a future build system.

**How**:

Create a separate build-post-config script. The full order of
bootstrapping will now be:

- deploy/build
- deploy/activate
- deploy/build-post-config

--- a/deploy/build
+++ b/deploy/build
@@ -8,9 +8,14 @@
 
 set -euo pipefail
 
+echo "deploy/build starting"
+echo "HOME: ${HOME-}"
+cd "$(dirname "$0")/.."
+
 set -x
 
-cd "$(dirname "$0")/.."
+id
+which bundle
 
 bundle_dir=/srv/idp/shared
 
@@ -22,4 +27,6 @@ bundle install --deployment --jobs 4 \
 bundle exec yarn install
 bundle exec yarn build
 
-bundle exec rake assets:precompile
+set +x
+
+echo "deploy/build finished"
