--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,6 +17,7 @@ AllCops:
     - 'spec/services/pii/nist_encryption_spec.rb'
     - 'lib/rspec/user_flow_formatter.rb'
     - 'lib/user_flow_exporter.rb'
+    - 'node_modules/**/*'
   TargetRubyVersion: 2.3
   TargetRailsVersion: 5.1
   UseCache: true
