Speed up agency based uuids db migration script and create rake task
**Why**: The db migration script is running too slow on prod data and the scripts in bin don't get copied to prod

**How** Create a new rake task called agency_based_uuids and remove the in clause (which handled successive and increasing larger runs of a single agency's uuid priorities) on the sql and add 'on conflict do nothing'. There is no risk of duplicated rows because there is two unique indexes on the table.

--- a/config/database.yml
+++ b/config/database.yml
@@ -10,7 +10,7 @@ defaults: &defaults
   pool: 5
   <<: *postgresql
   # timeout settings
-  timeout: 5000
+  timeout: <%= Figaro.env.database_timeout.to_i %>
   reconnect: true
   connect_timeout: 2
   keepalives_idle: 10
