--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -79,6 +79,7 @@ development:
   database_host: ''
   database_name: ''
   database_password: ''
+  database_timeout: '5000'
   database_username: ''
   domain_name: 'localhost:3000'
   enable_agency_based_uuids: 'false'
@@ -255,6 +256,7 @@ test:
   database_host: ''
   database_name: ''
   database_password: ''
+  database_timeout: '5000'
   database_username: ''
   dashboard_api_token: '123ABC'
   enable_agency_based_uuids: 'false'
