--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,5 @@
+<% require 'production_database_configuration' %>
+
 postgresql: &postgresql
   adapter: postgresql
   encoding: utf8
@@ -33,6 +35,6 @@ production:
   username: <%= Figaro.env.database_username! %>
   host: <%= Figaro.env.database_host! %>
   password: <%= Figaro.env.database_password! %>
-  pool: <%= (File.exist?('/etc/login.gov/info') && File.read('/etc/login.gov/info/role').chomp == 'worker') ? 26 : 5 %>
+  pool: <%= ProductionDatabaseConfiguration.pool %>
   sslmode: 'verify-full'
   sslrootcert: '/usr/local/share/aws/rds-combined-ca-bundle.pem'
