Allow users to delete their login.gov account
**Why**: Users want to be able to delete their account so the government doesn't retain their information.

**How** Provide a link on the accounts page which brings up an are you sure modal after forcing them to enter their password. On that modal they can either select delete account or cancel. In order to prevent uuids from being reused (ie two users with the same uuid from a client perspective) we will retain identity records since they do not contain PII. The "used" uuid is retained in the identity table as an orphan row and the unique index on that field prevents it from being used again.

--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -110,6 +110,7 @@ ignore_unused:
   - 'account.index.auth_app_disabled'
   - 'tooltips.authentication_app'
   - 'titles.sign_up.*'
+  - 'users.delete.bullet_2_loa*'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
 # - 'simple_form.{error_notification,required}.:'
