Add ability to remember a phone for 2FA
**Why**: So that users who log in repeatedly do not need to continually
2FA

**How**: Store an encrypted cookie that contains the user's ID and the
time the cookie was created. When the user goes to 2FA, check for that
cookie, and skip 2FA if it exists.

--- a/config/application.yml.example
+++ b/config/application.yml.example
@@ -128,6 +128,7 @@ development:
   reauthn_window: '120'
   redis_url: 'redis://localhost:6379/0'
   redis_throttle_url: 'redis://localhost:6379/1'
+  remember_device_expiration_days: '30'
   requests_per_ip_limit: '300'
   requests_per_ip_period: '300'
   requests_per_ip_track_only_mode: 'false'
@@ -217,6 +218,7 @@ production:
   reauthn_window: '120'
   redis_url: 'redis://redis.login.gov.internal:6379'
   redis_throttle_url: 'redis://redis.login.gov.internal:6379/1'
+  remember_device_expiration_days: '30'
   requests_per_ip_limit: '300'
   requests_per_ip_period: '300'
   requests_per_ip_track_only_mode: 'true'
@@ -307,6 +309,7 @@ test:
   reauthn_window: '120'
   redis_url: 'redis://localhost:6379/0'
   redis_throttle_url: 'redis://localhost:6379/1'
+  remember_device_expiration_days: '30'
   requests_per_ip_limit: '4'
   requests_per_ip_period: '60'
   requests_per_ip_track_only_mode: 'false'
